deploy/helm/jwt-token-service/manifests.yaml
---
# Source: jwt-token-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-jwt-token-service
  labels:
    helm.sh/chart: jwt-token-service-0.0.1
    app.kubernetes.io/name: jwt-token-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jwt-token-service
    app.kubernetes.io/instance: release-name
---
# Source: jwt-token-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-jwt-token-service
  labels:
    helm.sh/chart: jwt-token-service-0.0.1
    app.kubernetes.io/name: jwt-token-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jwt-token-service
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: jwt-token-service-0.0.1
        app.kubernetes.io/name: jwt-token-service
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      imagePullSecrets:
        - jwt-token-service-image-pull-secret
      serviceAccountName: release-name-jwt-token-service
      securityContext:
        {}
      containers:
        - name: jwt-token-service
          securityContext:
            {}
          image: "docker pull ghcr.io/hgochev/jwt-token-issuer:8:8"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: jwt-token-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-jwt-token-service
  labels:
    helm.sh/chart: jwt-token-service-0.0.1
    app.kubernetes.io/name: jwt-token-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-jwt-token-service
                port:
                  number: 80
---
# Source: jwt-token-service/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-jwt-token-service-test-connection"
  labels:
    helm.sh/chart: jwt-token-service-0.0.1
    app.kubernetes.io/name: jwt-token-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-jwt-token-service:80']
  restartPolicy: Never
